CTF-11: Add home page

--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -1,1 +1,10 @@
 @import '~govuk-frontend';
+
+// sass-lint:disable class-name-format
+.govuk-phase-banner__text {
+  width: 100%;
+
+  .fact-language {
+    float: right;
+  }
+}
