--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -1,7 +1,18 @@
 {% extends "govuk/template.njk" %}
+{% from "govuk/components/phase-banner/macro.njk"     import govukPhaseBanner %}
 
 {% block head %}
   {% include "webpack/css.njk" %}
+{% endblock %}
+
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+      tag: {
+        text: "alpha"
+      },
+      html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it. <a href="#" class="govuk-link fact-language">Cymraeg</a>'
+    })
+  }}
 {% endblock %}
 
 {% block bodyEnd %}
