--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block pageTitle %}
-Find a court or tribunal - GOV.UK
+{{ title }}
 {% endblock %}
 
 {% block content %}
@@ -13,40 +13,37 @@ Find a court or tribunal - GOV.UK
       {% if serviceName %} {{ serviceName }} {% endif %}
     </h1>
 
-    <p class="govuk-body-m">Use this service to find a court or tribunal in England and Wales</p>
+    <p class="govuk-body-m">{{ p1 }}</p>
 
     <ul class="govuk-list govuk-list--bullet">
 
-      <li>address</li>
-      <li>contact details</li>
-      <li>opening times</li>
-      <li>building information e.g. disabled access or parking</li>
-      <li>to help me get an update</li>
+      {% for bullet in bullets %}
+      <li>{{ bullet }}</li>
+      {% endfor %}
 
     </ul>
 
     {{ govukButton({
-    text: "Start now",
+    text: button,
     href: "#",
     classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
     isStartButton: true
     }) }}
 
-    <h2 class="govuk-heading-m">Before you search</h2>
+    <h2 class="govuk-heading-m">{{ h2 }}</h2>
 
-    <p class="govuk-inset-text">The online service is also available in <a class="govuk-link" href="#">Welsh (Cymraeg)</a>.</p>
+    <p class="govuk-inset-text">{{ p1_text}}<a class="govuk-link" href="{{ p1_link }}">{{ p1_link_text }}</a>.</p>
 
+    <p class="govuk-body-m">{{ p2_text }}<a href="https://www.justice-ni.gov.uk/topics/courts-and-tribunals" class="govuk-link">{{ p2_link_text }}</a>{{ p2_text2 }}.</p>
 
-    <p class="govuk-body-m">You cannot use this service if you live in Northern Ireland. Contact the <a href="https://www.justice-ni.gov.uk/topics/courts-and-tribunals" class="govuk-link">Northern Ireland Courts and Tribunals</a> for help.</p>
-
-    <p class="govuk-body-m">This service is limited in Scotland to:</p>
+    <p class="govuk-body-m">{{ p3_text }}</p>
     <ul>
-      <li class="govuk-body-m">Immigration appeals</li>
-      <li class="govuk-body-m">Benefit appeals</li>
-      <li class="govuk-body-m">Employment claims appeals</li>
+      {% for bullet in bullets2 %}
+      <li class="govuk-body-m">{{ bullet }}</li>
+      {% endfor %}
     </ul>
 
-    <p class="govuk-body-m">Contact the <a href="https://www.scotcourts.gov.uk/the-courts/the-tribunals" class="govuk-link">Scottish Courts and Tribunals</a> for other services.</p>
+    <p class="govuk-body-m">{{ p4_text }}<a href="https://www.scotcourts.gov.uk/the-courts/the-tribunals" class="govuk-link">{{ p4_link_text }}</a>{{ p4_text2 }}.</p>
 
   </div>
 </div>{% endblock %}
