--- a/src/main/views/not-found.njk
+++ b/src/main/views/not-found.njk
@@ -1,5 +1,5 @@
 {% extends "template.njk" %}
 
 {% block content %}
-  <h1 class="govuk-heading-xl">Page Not Found</h1>
+  <h1 class="govuk-heading-xl">{{ h1 }}</h1>
 {% endblock %}
