--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -10,7 +10,7 @@
       tag: {
         text: "alpha"
       },
-      html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it. <a href="#" class="govuk-link fact-language">Cymraeg</a>'
+      html: feedback + languageToggle
     })
   }}
 {% endblock %}
