--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -1,8 +1,9 @@
-{% extends "template.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
+{% extends "template.njk" %}
+
 {% block pageTitle %}
-{{ title }}
+  {{ title }}
 {% endblock %}
 
 {% block content %}
@@ -24,10 +25,10 @@
     </ul>
 
     {{ govukButton({
-    text: button,
-    href: "#",
-    classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
-    isStartButton: true
+      text: button,
+      href: "/name",
+      classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
+      isStartButton: true
     }) }}
 
     <h2 class="govuk-heading-m">{{ h2 }}</h2>
