--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -26,7 +26,7 @@
 
     {{ govukButton({
       text: button,
-      href: "/name",
+      href: "/search-option",
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
       isStartButton: true
     }) }}
