clean up functional test

--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -24,11 +24,11 @@ href: "#"
     </div>
     <form method="POST">
       <div class="govuk-form-group">
-        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="court-tribunal-name">
+        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="search">
           {{ text }}
         </label>
         </h1>
-        <input class="govuk-input" id="court-tribunal-name" name="name" type="text">
+        <input class="govuk-input" id="search" name="name" type="text">
       </div>
       {{ govukButton({
         text: button,
