--- a/src/main/views/search/option.njk
+++ b/src/main/views/search/option.njk
@@ -31,14 +31,14 @@
           </div>
           <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="i-know-the-name" name="knowName" type="radio" value="yes">
-              <label class="govuk-label govuk-radios__label" for="i-know-the-name">
+              <input class="govuk-radios__input" id="i-have-the-name" name="knowName" type="radio" value="yes">
+              <label class="govuk-label govuk-radios__label" for="i-have-the-name">
                 {{ answers.a1 }}
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="i-do-not-know-the-name" name="knowName" type="radio" value="no">
-              <label class="govuk-label govuk-radios__label" for="i-do-not-know-the-name">
+              <input class="govuk-radios__input" id="i-do-not-have-the-name" name="knowName" type="radio" value="no">
+              <label class="govuk-label govuk-radios__label" for="i-do-not-have-the-name">
                 {{ answers.a2 }}
               </label>
             </div>
