including results page

--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -1,5 +1,5 @@
-{% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+{% from "macros/search-field.njk" import searchField %}
 
 {% extends "template.njk" %}
 
@@ -19,23 +19,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">{{ question }}</h1>
-    <div id="header-hint" class="govuk-hint">
-      {{ hint.text }}
-    </div>
-    <form method="POST">
-      <div class="govuk-form-group">
-        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="search">
-          {{ text }}
-        </label>
-        </h1>
-        <input class="govuk-input" id="search" name="name" type="text">
-      </div>
-      {{ govukButton({
-        text: button,
-        classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
-      }) }}
-    </form>
+    {{ searchField(question, hint, text, button) }}
   </div>
 </div>
 
