--- a/src/main/views/search/option.njk
+++ b/src/main/views/search/option.njk
@@ -28,7 +28,7 @@
             </h1>
           </legend>
           <div id="do-you-know-the-name-hint" class="govuk-hint">
-            {{ hint.text }}
+            {{ hint }}
           </div>
           <div class="govuk-radios">
             <div class="govuk-radios__item">
