--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -1,5 +1,6 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "macros/search-field.njk" import searchField %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% extends "template.njk" %}
 
@@ -19,7 +20,45 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {{ searchField(question, hint, text, button) }}
+    <h1 class="govuk-heading-l">{{ question }}
+      <span id="header-hint" class="govuk-hint">
+        {{ hint }}
+      </span>
+    </h1>
+    <form method="POST">
+      {{ govukInput({
+        label: {
+          text: text,
+          classes: "govuk-label--m",
+          isPageHeading: true
+        },
+        classes: "govuk-input govuk-!-width-three-quarters",
+        id: "search",
+        name: "search"
+        }) }}
+        {{ govukButton({
+          text: button,
+          classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+      }) }}
+    </form>
+
+    {% if (path !== '/location-search') and (results.length > 0) %}
+      <p class="govuk-body">{{ foundResults | safe }}</p>
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      {% for item in results %}
+        <h2 class="govuk-heading-m">
+          <a class="govuk-link" href="{{ item.title }}">{{ item.title }}</a>
+        </h2>
+      {% endfor %}
+    {% else %}
+      <p class="govuk-body-m govuk-!-font-weight-bold">{{ noResults.p1 }}</p>
+      <p class="govuk-body">{{ noResults.p2 }}</p>
+      <ul class="govuk-list govuk-list--bullet">
+      {% for item, text in noResults.list %}
+        <li>{{ text | safe }}</li>
+      {% endfor %}
+      </ul>
+    {% endif %}
   </div>
 </div>
 
