--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -25,7 +25,7 @@
         {{ hint }}
       </span>
     </h1>
-    <form method="POST">
+    <form method="GET" action="/search-for-location">
       {{ govukInput({
         label: {
           text: text,
