--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -47,7 +47,7 @@
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
       {% for item in results %}
         <h2 class="govuk-heading-m">
-          <a class="govuk-link" href="{{ item.title }}">{{ item.title }}</a>
+          <a class="govuk-link" href="{{ item.name }}">{{ item.name }}</a>
         </h2>
       {% endfor %}
     {% else %}
