--- a/src/main/views/search/option.njk
+++ b/src/main/views/search/option.njk
@@ -1,6 +1,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+{% from "macros/error-summary.njk" import errorSummary %}
 
 {% extends "template.njk" %}
 
@@ -18,6 +19,10 @@
 {% endblock %}
 
 {% block content %}
+{% if errors %}
+  {{ errorSummary(error.title, error.text, "#knowLocation") }}
+{% endif %}
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="POST">
@@ -34,6 +39,7 @@
         hint: {
           text: hint
         },
+        errorMessage: { text: error.text | safe } if errors,
         items: [
           {
             value: "yes",
