--- a/src/main/views/search/option.njk
+++ b/src/main/views/search/option.njk
@@ -42,10 +42,12 @@
         errorMessage: { text: error.text | safe } if errors,
         items: [
           {
+            id: "i-have-the-name",
             value: "yes",
             text: answers.a1
           },
           {
+            id: "i-do-not-have-the-name",
             value: "no",
             text: answers.a2
           }
