--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -51,19 +51,23 @@
     {% if (path !== '/location-search') and (results.length > 0) %}
       <p class="govuk-body">{{ foundResults | safe }}</p>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-      {% for item in results %}
-        <h2 class="govuk-heading-m">
-          <a class="govuk-link" href="{{ item.name }}">{{ item.name }}</a>
-        </h2>
-      {% endfor %}
+      <div class="search-results" id="search-results">
+        {% for item in results %}
+          <h2 class="govuk-heading-m">
+            <a class="govuk-link" href="{{ item.name }}">{{ item.name }}</a>
+          </h2>
+        {% endfor %}
+      </div>
     {% elif (path !== '/location-search') %}
-      <p class="govuk-body-m govuk-!-font-weight-bold">{{ noResults.p1 }}</p>
-      <p class="govuk-body">{{ noResults.p2 }}</p>
-      <ul class="govuk-list govuk-list--bullet">
-      {% for item, text in noResults.list %}
-        <li>{{ text | safe }}</li>
-      {% endfor %}
-      </ul>
+      <div class="no-search-results" id="no-search-results">
+        <p class="govuk-body-m govuk-!-font-weight-bold">{{ noResults.p1 }}</p>
+        <p class="govuk-body">{{ noResults.p2 }}</p>
+        <ul class="govuk-list govuk-list--bullet">
+        {% for item, text in noResults.list %}
+          <li>{{ text | safe }}</li>
+        {% endfor %}
+        </ul>
+      </div>
     {% endif %}
   </div>
 </div>
