--- a/src/main/views/webpack/css.njk
+++ b/src/main/views/webpack/css.njk
@@ -1,1 +1,1 @@
-<link href="/<%= htmlWebpackPlugin.files.css[0].substr(htmlWebpackPlugin.files.publicPath.length) %>" rel="stylesheet">
+<link href="/main.bb675d47fb8143461a36.css" rel="stylesheet">
