--- a/src/main/views/webpack/js.njk
+++ b/src/main/views/webpack/js.njk
@@ -1,1 +1,1 @@
- <script src="<%= htmlWebpackPlugin.files.js[0].substr(htmlWebpackPlugin.files.publicPath.length) %>"></script>
+ <script src="main.c3667464bdfa44fa8def.js"></script>
