--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -40,6 +40,7 @@
         classes: "govuk-input govuk-!-width-three-quarters",
         id: "search",
         name: "search",
+        value: search,
         errorMessage: { text: error.text | safe } if errors
         }) }}
         {{ govukButton({
@@ -52,7 +53,7 @@
       <p class="govuk-body">{{ foundResults | safe }}</p>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
       <div class="search-results" id="search-results">
-        {% for item in results %}
+        {% for item in results | sort(attribute="name") %}
           <h2 class="govuk-heading-m">
             <a class="govuk-link" href="{{ item.name }}">{{ item.name }}</a>
           </h2>
