scss and setting webpack to correct css file

--- a/src/main/views/court-details.njk
+++ b/src/main/views/court-details.njk
@@ -125,7 +125,7 @@ href: "/"
       {% endif %}
 
       {% if results.emails and results.emails.length > 0 %}
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row" id="emails">
           <h3 class="govuk-heading-m">
             Email
           </h3>
@@ -151,7 +151,7 @@ href: "/"
       {% endif %}
 
       {% if results.contacts and results.contacts.length > 0 %}
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row" id="contacts">
           <h3 class="govuk-heading-m">
             Telephone
           </h3>
