--- a/src/main/assets/scss/court-details.scss
+++ b/src/main/assets/scss/court-details.scss
@@ -3,6 +3,11 @@
     padding: 0 30px;
   }
 
+  .address {
+    white-space: pre-line;
+    margin-top: -1em;
+  }
+
   .multiple-addresses {
     padding-left: 0;
   }
