--- a/src/main/views/court-details.njk
+++ b/src/main/views/court-details.njk
@@ -49,8 +49,8 @@ href: "/"
               {{ results.addresses[0].type }}:
             </h3>
             <p class="govuk-body-m address">
-              {{ results.addresses[0].address }}<br>
-              {{ results.addresses[0].town }}<br>
+              {{ results.addresses[0].address }}
+              {{ results.addresses[0].town }}
               {{ results.addresses[0].postcode }}
             </p>
           </div>
