--- a/src/main/views/court-details.njk
+++ b/src/main/views/court-details.njk
@@ -111,7 +111,7 @@ href: "/"
         </div>
       {% endif %}
 
-      {% if results['opening_times'] and results['opening_times'].length > 0%}
+      {% if results['in_person'] and results['opening_times'] and results['opening_times'].length > 0%}
         <div class="govuk-grid-row" id="opening-times">
           <h3 class="govuk-heading-m">
             Opening times
@@ -217,7 +217,7 @@ href: "/"
     <div class="govuk-grid-column-one-third" id="side-content">
       {% if results['in_person'] %}
         <div class="govuk-grid-row">
-          <img src="{{ court.url }}" alt="Front view of {{ results.name }}">
+          <img src="{{ court.image_file }}" alt="Front view of {{ results.name }}">
           <p class="govuk-body-s">
             {{ results.name }}
           </p>
@@ -229,9 +229,9 @@ href: "/"
               This location handles:
             </h3>
             <ul class="govuk-list">
-              {% for area in results['areas_of_law'] | sort(attribute="service") %}
+              {% for area in results['areas_of_law'] | sort(attribute="name") %}
                 <li>
-                  <a class="govuk-link" href="{{ area.url }}">{{ area.service }}</a>
+                  <a class="govuk-link" href="{{ area.external_link }}">{{ area.name }}</a>
                 </li>
               {% endfor %}
             </ul>
