--- a/src/main/views/court-details.njk
+++ b/src/main/views/court-details.njk
@@ -49,8 +49,10 @@ href: "/"
               {{ results.addresses[0].type }}:
             </h3>
             <p class="govuk-body-m address">
-              {{ results.addresses[0].address }}
-              {{ results.addresses[0].town }}
+              {% for addressLine in results.addresses[0].address_lines %}
+                {{ addressLine }}<br>
+              {% endfor %}
+              {{ results.addresses[0].town }}<br>
               {{ results.addresses[0].postcode }}
             </p>
           </div>
@@ -70,8 +72,10 @@ href: "/"
               </h3>
             {% endif %}
               <p class="govuk-body-m address">
-                {{ address.address }}
-                {{ address.town }}
+                {% for addressLine in results.address_lines %}
+                  {{ addressLine }}<br>
+                {% endfor %}
+                {{ address.town }}<br>
                 {{ address.postcode }}
               </p>
             {% if results.addresses.length > 1 %}
@@ -111,7 +115,7 @@ href: "/"
         </div>
       {% endif %}
 
-      {% if results['in_person'] and results['opening_times'] and results['opening_times'].length > 0%}
+      {% if results['opening_times'] and results['opening_times'].length > 0%}
         <div class="govuk-grid-row" id="opening-times">
           <h3 class="govuk-heading-m">
             Opening times
